fixed alignment of header logo

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -83,7 +83,6 @@ body .fancy-bg {
 }
 
 .logo-text {
-    margin-left: 16px;
     font-size: 24px;
     font-weight: 500;
 }
